Remove Show Decorations option from Transform Tool

This option didn't work for several years and noone noticed that. I'm
also not sure it is possible to make it work in a sane way for new
transformation modes, like "Cage" and "Liquify". It seems like the
option didn't work right from implementation of these modes.

BUG:413573